# lonaat-backend

./: .env.example  .env.production.template  .env.test  .gitignore  .replit  ADMIN-DASHBOARD-FIX.md  ADMIN-ROUTES-500-ERROR-FIX.md  ADMIN-ROUTES-STABILIZATION.md  ADMIN_CONSOLIDATION_REPORT.md  ADMIN_DISPLAY_FIX_REPORT.md  ADMIN_ROUTES_IMPLEMENTATION_GUIDE.md  ADMIN_TEST_SUITE.md  ADMIN_WITHDRAWAL_SYSTEM.md  AI-IMPLEMENTATION-REFINED.md  AI-INPUT-VALIDATION-COMPLETE.md  AI-MEMORY-SYSTEM-PLAN.md  AI-RATE-LIMIT-COMPLETE.md  AI-TABLES-CHECK-RESULT.md  ANALYTICS_DASHBOARD_AUDIT.md  ANALYTICS_ENDPOINTS_IMPLEMENTATION.md  ANALYTICS_FIX_COMPLETE.md  ANALYTICS_SYSTEM_PRODUCTION_AUDIT.md  ANALYTICS_USER_ACCESS.md  ANTI_FRAUD_PROTECTIONS.md  API_DOCUMENTATION.md  API_DOCUMENTATION_INDEX.md  API_RESPONSE_STRUCTURE_FIX.md  AUDIT_GRADE_WITHDRAWAL_SYSTEM.md  AUTH-LIMITER-ISOLATION-TEST.md  AUTH-LIMITER-VERIFICATION.md  AUTH-ROUTE-VERIFICATION.md  AUTH_VS_SERVER_ERROR_VERIFICATION.md  BACKEND-CONFLICT-DETECTION.md  BACKEND_CONTRACT_AUDIT.md  BACKEND_CONTRACT_VERIFICATION.md  BACKEND_HEALTH_VERIFIED.md  BACKEND_RESPONSE_CONTRACTS.md  BACKUP-RECOVERY-STRATEGY.md  CLICK_TRACKING_VERIFICATION_REPORT.md  COMMISSION_RATES_ENGINE.md  (+288 more)
.github/: GITHUB_DEPLOYMENT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
attached_assets/: Pasted--DOCTYPE-html-html-head-meta-charset-utf-8-meta-name-viewport-content-width-device-wid-1761805774421_1761805774421.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1761740956725_1761740956726.txt  Pasted--LONAAT-FULL-IMPLEMENTATION-OF-ALL-5-REQUESTED-POINTS-Y_1769009009161.txt  (+51 more)
backend/: SETUP.md  (+45 more)
(+1033 files in other folders)
