[project]
name = "lonaat-backend"
version = "0.1.0"
description = "Lonaat Backend API"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cryptography>=46.0.3",
    "fastapi>=0.120.1",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.38.0",
]
